--- a/src/components/product/ProductDetails.module.css
+++ b/src/components/product/ProductDetails.module.css
@@ -1,3 +1,7 @@
 .productDetails {
   padding: 16px 0;
 }
+
+.container {
+  padding: 0px 8px;
+}
