--- a/src/components/product/ProductHeader.module.css
+++ b/src/components/product/ProductHeader.module.css
@@ -83,6 +83,37 @@
   transition: background 0.15s;
 }
 
-.button + .button {
+.button ~ .button {
   margin-left: 4px;
+}
+
+@media (max-width: 767px) {
+  .productHeader {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 65px;
+  }
+
+  .spacer {
+    display: none;
+  }
+
+  .actionsFill,
+  .actions {
+    grid-row: 3 / span 1;
+    grid-column: 1 / 1;
+  }
+
+  .basic {
+    grid-row: 2 / span 1;
+    grid-column: 1 / 1;
+  }
+
+  .logo {
+    grid-row: 1 / span 1;
+  }
+
+  .basic,
+  .actions {
+    padding: 0 8px;
+  }
 }
